--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1,6 +1,6 @@
-/* ---
+---
 layout: null
---- */
+---
 
 @import url("pygment_highlights.css");
 
@@ -22,7 +22,7 @@ body {
   background-attachment: fixed;
   {% endif %}
   overflow-wrap: break-word;
-  /* background-repeat: no-repeat; */
+  background-repeat: no-repeat; 
   
 }
 p {
